feat(identity): complete register flow with DDD and Hexagonal Architecture
- implement User aggregate lifecycle with register() and restore()
- add rich domain behaviors and business invariants
- introduce Value Objects for Username, Email, Password, and FullName
- implement PasswordEncoderPort abstraction
- add persistence mapping between domain and JPA entities
- implement JpaUserRepositoryAdapter with toEntity/toDomain mapping
- separate business creation from persistence reconstruction
- add UserResponse DTO and application boundary mapping
- connect application, domain, and infrastructure layers
- expose first Register API using Hexagonal Architecture
- complete end-to-end register use case from domain to REST API